feat: Added getTags method